# mri-relaxkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: COMMERCIAL_POSITIONING.md  PUBLIC_RELEASE_CHECKLIST.md  SOP.md
mri_relaxkit/: __init__.py  analysis.py  cli.py  data.py  demo.py  fitting.py  release_audit.py  reporting.py
scripts/: build_readme_assets.py
tests/: test_relaxkit.py
